# BattleShip

./: CMakeLists.txt  LICENCE.txt  README.md  bs
src/: CMakeLists.txt  bs.h  checkBoard.c  computerTurn.c  getDelta.c  getSizeOfShip.c  killHit.c  main.c  makeHit.c  placeShip.c  playerTurn.c  printBoard.c  printSym.c  quitHndl.c  setUpBoard.c  shipSymbol.c
src/stack/: CMakeLists.txt  getSize.c  killStack.c  makeStack.c  pop.c  push.c  stack.h
